# grater

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yaml
src/: App.svelte  App.vue  main.rs  pdf-table-extractor.ts
src-rust/: lib.rs  main.rs
src/components/: Grater.vue
src/lib/: Counter.svelte
