[package]
name = "grater"
version = "0.1.0"
edition = "2021"

[lib]
name = "grater"
path = "src-rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
itertools = "0.12.1"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.83"
